WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282470
[Cocoa] REGRESSION(
284617@main
): wantsEDR should not be set for RGB10 pixel format
https://bugs.webkit.org/show_bug.cgi?id=282470
Summary
[Cocoa] REGRESSION(284617@main): wantsEDR should not be set for RGB10 pixel f...
Said Abou-Hallawa
Reported
2024-11-01 15:51:38 PDT
284617@main
added the call to [layer setWantsExtendedDynamicRangeContent:true] for the RGBA10 and RGBA16F pixel formats. It turned out this not needed for RGBA10 but it is also very expensive. wantsEDR should be set only for RGBA16F.
Attachments
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2024-11-01 15:52:43 PDT
rdar://138368953
Said Abou-Hallawa
Comment 2
2024-11-01 15:58:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/36069
EWS
Comment 3
2024-11-01 21:49:44 PDT
Committed
286047@main
(b3a7326fa62f): <
https://commits.webkit.org/286047@main
> Reviewed commits have been landed. Closing PR #36069 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug