[Cocoa] REGRESSION(284617@main): wantsEDR should not be set for RGB10 pixel format https://bugs.webkit.org/show_bug.cgi?id=282470 rdar://138368953

Reviewed by Simon Fraser.

284617@main added the call to setWantsExtendedDynamicRangeContent for the RGBA10
and RGBA16F pixel formats. It turned out this not needed for RGBA10 but it is
also very expensive. wantsEDR should be set only for RGBA16F.

* Source/WebCore/platform/graphics/ca/cocoa/ContentsFormatCocoa.h:
(WebCore::contentsFormatWantsExtendedDynamicRangeContent): Deleted.
(WebCore::contentsFormatWantsToneMapMode): Deleted.
* Source/WebCore/platform/graphics/ca/cocoa/PlatformCALayerCocoa.mm:
(WebCore::PlatformCALayerCocoa::updateContentsFormat):
* Source/WebCore/platform/ios/LegacyTileGridTile.mm:
(WebCore::LegacyTileGridTile::LegacyTileGridTile):
* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerTreePropertyApplier.mm:
(WebKit::RemoteLayerTreePropertyApplier::applyPropertiesToLayer):

Canonical link: https://commits.webkit.org/286047@main